# AntibodyForge

./: Cargo.toml  README.md  pyproject.toml
benchmarks/: vram_gc_benchmark.py
configs/: default.yaml
scripts/: design.py  train.py
src/: __init__.py  pipeline.py
src/beam/: __init__.py  search.py  slab.rs  slab_allocator.py
src/kernels/: __init__.py  sparse_cdr_attention.py
src/model/: __init__.py  transformer.py
src/scorer/: __init__.py  delta_g.py
src/utils/: __init__.py  structure.py
tests/integration/: test_pipeline.py
tests/unit/: test_beam_search.py  test_scorer.py  test_sparse_attention.py  test_structure.py  test_transformer.py
